Bug 278296 - Cannot update field name from Property Editor
Summary: Cannot update field name from Property Editor
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-22 21:57 UTC by Dimitrios T Tanis
Modified: 2012-08-11 11:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.1 (Calligra 2.4.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitrios T Tanis 2011-07-22 21:57:45 UTC
Version:           2.4 alpha3 (Calligra 2.4 alpha3) (using KDE 4.6.0) 
OS:                Linux

Although the field name property seems to be updated when changed, It doesn't change the designer's table Field Caption entry, neither the Field's name in Data view, That means it is not changed whatsoever.

Reproducible: Always

Steps to Reproduce:
Open a table in design view > select a field > Try to change it's name from the Property Editor

Actual Results:  
The change seems to be accepted in the Property Editor.
The Field Caption in the table area is not changed.
Goind to data view after saving, the change is not seen.
Going back to design view, the Property editor displays the new value, yet the Field Caption the old one.
Changing the Field Caption, updates the Name property, both in the Property Editor and Data view.

Expected Results:  
The name property should synchronize with the Field Caption and display the change correctly.

The Type label just below the Properties Tab in the property Editor, follows the Field Caption column.

There must be something missing when changing the Name property.
Comment 1 Jarosław Staniek 2012-04-16 20:12:18 UTC
Git commit d91dcfcf47b1c58b308487902b0d89b7a990ce52 by Jaroslaw Staniek.
Committed on 15/04/2012 at 01:40.
Pushed by staniek into branch 'calligra/2.4'.

Kexi Tables: Fixed bug: Cannot update field name from Property Editor
FIXED-IN:2.4.1 (Calligra 2.4.1)

REVIEW:104600

M  +6    -11   kexi/doc/dev/CHANGELOG-Kexi-js
M  +2    -2    kexi/plugins/tables/kexitabledesignerview.cpp

http://commits.kde.org/calligra/d91dcfcf47b1c58b308487902b0d89b7a990ce52
Comment 2 Jarosław Staniek 2012-04-16 20:12:29 UTC
Git commit 66ad609babdf5b2a65d47b210e1b1a67f3600559 by Jaroslaw Staniek.
Committed on 15/04/2012 at 01:40.
Pushed by staniek into branch 'master'.

Kexi Tables: Fixed bug: Cannot update field name from Property Editor
FIXED-IN:2.4.1 (Calligra 2.4.1)

REVIEW:104600

M  +6    -11   kexi/doc/dev/CHANGELOG-Kexi-js
M  +2    -2    kexi/plugins/tables/kexitabledesignerview.cpp

http://commits.kde.org/calligra/66ad609babdf5b2a65d47b210e1b1a67f3600559