Kexi Tables: Fixed bug: Cannot update field name from Property Editor

BUG:278296
FIXED-IN:2.4.1 (Calligra 2.4.1)

REVIEW:104600